<resources>
    <string name="app_name">Lista de libros</string>
    <string name="tv_empty">No disponible</string>
    <string name="hint_search">Buscar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="book_title"><b>Titulo:</b> %1$s</string>
    <string name="author_name"><b>Autor:</b> %1$s %2$s</string>
    <string name="category"><b>Categoria:</b> %1$s</string>
    <string name="date"><b>Fecha de publicación:</b> %1$s</string>
    <string name="pages_number"><b>Numero de paginas:</b> %1$s</string>
    <string name="isbn"><b>ISBN:</b> %1$s</string>
    <string name="description"><b>Descripción:</b> %1$s</string>
    <string name="pd_message">Cargando lista</string>
    <string name="pd_message_add_book">Agregando</string>

    <string name="et_book_title">Titulo del libro</string>
    <string name="et_author_name">Nombre del autor</string>
    <string name="et_category">Categoria</string>
    <string name="et_date">Fecha de publicación</string>
    <string name="et_pages_number">Numero de paginas</string>
    <string name="et_isbn">Isbn</string>
    <string name="et_description">Descripcion</string>
    <string name="et_url_imagen">URL de la imagen</string>
    <string name="et_publisher">Editorial</string>
    <string name="btn_text">Agregar libro</string>


    <string name="et_empty">Este campo no puede estar vacio</string>
    <string name="et_isbn_error_lertras">El Isbn no puede contener letras</string>
    <string name="et_pages_error_lertras">El numero de paginas no puede contener letras</string>
    <string name="et_isbn_error_tamanos">La longitud del isbn debe de ser de 10 digitos</string>


    <string name="alert_title">¡Alerta!</string>
    <string name="alert_body">Estas seguro que deseas eliminar: %1s</string>
    <string name="alert_option_yes">Si</string>
    <string name="alert_option_no">No</string>

    <string name="warning_title">¡Atención!</string>
    <string name="warning_body">No es posible agregar un libro si no tienes conexión a internet</string>
    <string name="warning_body_internet">¡Verifica tu conexion a internet!</string>
    <string name="warning_option">OK</string>


    <!-- toast-->
    <string name="error_toast_form">Error al llenar el formulario</string>





</resources>
