<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/et_book_title"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/et_author_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/et_isbn"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/et_category"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_editorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/et_publisher"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/et_description"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/et_fecha_pub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/et_date"
                android:inputType="date" />

            <EditText
                android:id="@+id/et_pages_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/et_pages_number"
                android:inputType="number" />

            <EditText
                android:id="@+id/et_image_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/et_url_imagen" />

            <Button
                android:id="@+id/btn_agregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_text" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>